change hero about and contact images

--- a/wvtrusttokens.css
+++ b/wvtrusttokens.css
@@ -109,7 +109,7 @@ body {
 
 
 .whorightdiv {
-    background:linear-gradient(0deg, rgba(60, 64, 111, 0.3), rgba(15, 15, 194, 0.3)), url("./assets/aboutback.jpg");
+    background:linear-gradient(0deg, rgba(60, 64, 111, 0.3), rgba(15, 15, 194, 0.3)), url("./assets/computer.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
